# ChangeLog for media-sound/puddletag
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/puddletag/ChangeLog,v 1.8 2011/02/13 20:08:22 billie Exp $

  13 Feb 2011; Daniel Pielmeier <billie@gentoo.org> -puddletag-0.9.11.ebuild:
  Remove old.

*puddletag-0.9.12 (09 Feb 2011)

  09 Feb 2011; Daniel Pielmeier <billie@gentoo.org> -puddletag-0.9.7.ebuild,
  +puddletag-0.9.12.ebuild:
  Version bump. Remove old.

*puddletag-0.9.11 (10 Jan 2011)

  10 Jan 2011; Daniel Pielmeier <billie@gentoo.org> +puddletag-0.9.11.ebuild:
  Version bump. Fixes bug #350855 reported by Nickolaj Stjujsckij.

  10 Nov 2010; Daniel Pielmeier <billie@gentoo.org> -puddletag-0.9.6.ebuild:
  Remove old.

*puddletag-0.9.7 (01 Nov 2010)

  01 Nov 2010; Daniel Pielmeier <billie@gentoo.org> -puddletag-0.9.5.ebuild,
  +puddletag-0.9.7.ebuild:
  Version bump. Remove old.

*puddletag-0.9.6 (16 Oct 2010)

  16 Oct 2010; Daniel Pielmeier <billie@gentoo.org> +puddletag-0.9.6.ebuild:
  Version bump.

  13 Oct 2010; Markos Chandras <hwoarang@gentoo.org> puddletag-0.9.5.ebuild:
  Keyworded for amd64. Bug #340497

*puddletag-0.9.5 (09 Oct 2010)

  09 Oct 2010; Daniel Pielmeier <billie@gentoo.org> +puddletag-0.9.5.ebuild,
  +metadata.xml:
  Initial commit. Fixes Bug #328305.
