@@ -1,4 +1,6 @@
+DIST puddletag-0.10.0.tar.gz 347497 RMD160 e4c2bac7c876f88d6dc11012a9a229aba2eacc7e SHA1 f8d0c3b89cc0b0788545b7d37e9cce1ebc608852 SHA256 38d8e8d8f36ca8aae3de83fa3df1cc31436a42688b8dd1eebf53b8cf28277547
 DIST puddletag-0.9.12.tar.gz 350571 RMD160 849355c11c076bfd32d950df9afb8f016bc6fe65 SHA1 865f41a715d94e5ef83ca371706d6df34992c728 SHA256 f003f6920366b9c29b1f3529137a71d0b5e641f64bfe96570790686f5731f011
+EBUILD puddletag-0.10.0.ebuild 1116 RMD160 49c8e51d0deafbd9fca1236b7b149cfe84156840 SHA1 a53cae2d50c74f75e9e4cac4495a55ab881d32ac SHA256 fd7cb691de47d749ab161c98c6f2d7ffeb7a3c4ddbe33f20ad59589f9b445125
 EBUILD puddletag-0.9.12.ebuild 1108 RMD160 09636974f2343aabcd064a6820f5fa8612efdfe3 SHA1 a2960e70151f05a8357afcc34799a01d2797d0dd SHA256 390e4274521317410b5f3504000efb9f9d0530371834825214dea61f94666c54
-MISC ChangeLog 1314 RMD160 3a8c8f3f7c855ce572bcb79ff1d331f7c7874c11 SHA1 8d1cf24f4ea4ac577493875944261911d05a4c44 SHA256 6d3d4142d8cb3135c8af02929cdabe4dbbc3795f222452616ac92785bb5ecb1b
+MISC ChangeLog 1442 RMD160 d4e8a2bdc58ceb6aba4ff7968f2b39aef6db7570 SHA1 bbd6005ed09191519be563c09a299165a93dcd1b SHA256 94e7eb4771b42aeeacbe1608cdb7417d6bf4fd07f5f51aa665d7091d5e33ec01
 MISC metadata.xml 403 RMD160 a7f84da8b40a3dfbefe89c81f8c6cb831affcb83 SHA1 60b7f236db05965fa992d9e4019c7bf6d455803a SHA256 b836298ddbe741ae7026ec8f3fccc322026d1e3fd904d88e8b59df9ac2951549
