@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/puddletag
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/puddletag/ChangeLog,v 1.8 2011/02/13 20:08:22 billie Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/puddletag/ChangeLog,v 1.9 2011/03/08 18:08:01 billie Exp $
+
+*puddletag-0.10.0 (08 Mar 2011)
+
+  08 Mar 2011; Daniel Pielmeier <billie@gentoo.org> +puddletag-0.10.0.ebuild:
+  Version bump.
 
   13 Feb 2011; Daniel Pielmeier <billie@gentoo.org> -puddletag-0.9.11.ebuild:
   Remove old.
